# server.js
@@ -1,3 +1,4 @@
+require('dotenv').config(); 
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const yaml = require('js-yaml');
@@ -9,8 +10,10 @@ const especialidadesRoutes = require('./routes/especialidadesRoutes');
 const pacientesRoutes = require('./routes/pacientesRoutes');
 const authRoutes = require('./routes/authRoutes');
 const medicosRoutes = require('./routes/medicosRoutes');
+const authMiddleware = require('./middlewares/authMiddleware')
 const app = express();
 const port = 5000;
+const jwt     = require('jsonwebtoken');
 // Cargar el archivo de configuración de Swagger
 const swaggerDocument = yaml.load(fs.readFileSync('./swagger.yaml', 'utf8'));
 
@@ -22,11 +25,20 @@ app.use(express.json());
 
 // Rutas
 
-app.use('/api', authRoutes);
-app.use('/api/citas', citasRoutes);
-app.use('/api/especialidades', especialidadesRoutes);
-app.use('/api/pacientes', pacientesRoutes);
-app.use('/api/medicos', medicosRoutes);
+// Rutas públicas
+app.use('/api/login', authRoutes);
+app.use('/api/pacientes', pacientesRoutes); // si quieres permitir registro público
+
+// **A partir de aquí todas requieren JWT**
+app.use('/api/citas', authMiddleware, citasRoutes);
+app.use('/api/especialidades', authMiddleware, especialidadesRoutes);
+app.use('/api/medicos', authMiddleware, medicosRoutes);
+
+//app.use('/api', authRoutes);
+//app.use('/api/citas',authenticateToken, citasRoutes);
+//app.use('/api/especialidades', especialidadesRoutes);
+//app.use('/api/pacientes',authenticateToken, pacientesRoutes);
+//app.use('/api/medicos', medicosRoutes);
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.listen(port, () => {
   console.log(`Servidor corriendo en http://localhost:${port}`);
